[package]
name = "necronomicon"
version = "0.1.4"
edition = "2021"
authors = ["Bolu <bolu@tuta.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
getset = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
